--- a/Week1CodeChallenge/Week1CodeChallenge/Week1CodeChallenge.csproj
+++ b/Week1CodeChallenge/Week1CodeChallenge/Week1CodeChallenge.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A6A422F-1DFD-46E8-B54A-4E13691F2C6E}</ProjectGuid>
+    <ProjectGuid>{D8110705-C764-4687-B0E4-3CE280DF63C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>Week1CodeChallenge</RootNamespace>
+    <AssemblyName>Week1CodeChallenge</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
